// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changelog fails silently when there isn't a spec in the current branch 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Could not find the Optic spec in the current branch. Looking in .optic/api/specification.yml.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Changelog fails silently when there isn't a spec in the head branch 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Could not find the Optic spec in the base branch main. Looking in .optic/api/specification.yml.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
